--- a/style.css
+++ b/style.css
@@ -93,3 +93,44 @@ body{
     height: 250px;
     width: 500px;
 }
+
+.info-header{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: auto;
+}
+
+.random-info-text{
+    font-size: 36px;
+    font-weight: 900;
+    color: #1f2937;
+    width: 100%;
+    text-align: center;
+}
+
+.info-container{
+    display: flex;
+    justify-content: center;
+}
+
+.card{
+    width: 65%;
+    padding-top: 65%;
+    border: 4px solid #3882f6;
+    border-radius: 8px;
+}
+
+.info{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    width: 250px;
+    text-align: center;
+}
+
+
+.info-text{
+    color:#1f2937;
+    font-size: 16px;
+}
