--- a/style.css
+++ b/style.css
@@ -134,3 +134,36 @@ body{
     color:#1f2937;
     font-size: 16px;
 }
+
+.quote-container{
+    margin-top: 100px;
+    background-color: #e5e7eb;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 400px;
+    flex-direction: column;
+}
+
+.quote-div{
+    width: 750px;
+}
+
+.quote{
+    margin-bottom: 5px;
+    font-size: 36px;
+    color: #1f2937;
+    font-style: italic;
+    font-weight: 300;
+    text-align: center;
+}
+
+.author{
+    display: flex;
+    align-self: flex-end;
+    width: 700px;
+    margin-top: 0;
+    font-size: 24px;
+    font-weight: 800;
+    color: #1f2937;
+}
