--- a/style.css
+++ b/style.css
@@ -210,3 +210,11 @@ body{
     font-size: 20px;
     border-radius: 8px;
 }
+
+.footer{
+    margin: 0;
+    color: #f9faf8;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
